concat usersnews with api news; updated detail-view

--- a/ad-client/src/app/main/news-detail/news-detail.component.html
+++ b/ad-client/src/app/main/news-detail/news-detail.component.html
@@ -1,1 +1,59 @@
-<p>news-detail works!</p>
+<div *ngIf="post; else loading" [post]="post">
+  <button mat-stroked-button routerLink="/news" class="my-3">
+    <i class="mb-1 material-icons md-18">arrow_back</i> Вернуться к списку
+    новостей
+  </button>
+
+  <mat-card class="tile-card">
+    <mat-card-header>
+      <mat-card-title>
+        {{ post.title }}
+      </mat-card-title>
+      <mat-card-subtitle>
+        <span class="category" matTooltip="Категория" matTooltipPosition="right"
+          ># {{ post.categoryType }} </span
+        ><br />
+        <small
+          >Опубликовано:
+          {{ post.publishedDate | date: "dd MMMM yyyy года в HH:mm" }}</small
+        >
+      </mat-card-subtitle>
+    </mat-card-header>
+    <img
+      *ngIf="post.titleImageUrl && !post.imageFile; else userInputPhoto"
+      mat-card-image
+      src="{{ post.titleImageUrl }}"
+    />
+    <ng-template #userInputPhoto>
+      <img mat-card-image [src]="image" />
+    </ng-template>
+    <mat-card-content>
+      {{ post.description }}
+    </mat-card-content>
+    <mat-card-actions>
+      <a href="{{ post.fullUrl }}" mat-stroked-button target="_blank"
+        >Смотреть в источнике</a
+      >
+    </mat-card-actions>
+  </mat-card>
+</div>
+
+<ng-template #loading>
+  <div class="row loading text-center">
+    <mat-card>
+      <mat-card-header>
+        <mat-progress-spinner [color]="color" [mode]="mode" style="margin: 5px">
+        </mat-progress-spinner>
+        <h2>Идёт загрузка поста...</h2>
+      </mat-card-header>
+      <mat-divider [inset]="false"></mat-divider>
+      <mat-card-footer>
+        <small>
+          P.S. если загрузка длится более 10 сек - вероятно срок действия Вашего
+          токена истёк.<br />
+          Пройдите повторно процедуру авторизации.
+        </small>
+      </mat-card-footer>
+    </mat-card>
+  </div>
+</ng-template>
