--- a/ad-client/src/app/main/news-post/news-post.component.html
+++ b/ad-client/src/app/main/news-post/news-post.component.html
@@ -1,36 +1,51 @@
 <mat-card class="tile-card" id="target{{ idx + 1 }}">
-  <mat-card-header>
-    <mat-card-title>
-      <a
-        class="title-link"
-        [routerLink]="post.imageFile ? '' : ['/news', 'item', post.url]"
-        >{{ post.title }}</a
-      >
-    </mat-card-title>
-    <mat-card-subtitle>
-      <span class="category" matTooltip="Категория" matTooltipPosition="right"
-        ># {{ post.categoryType }} </span
-      ><br />
-      <small
-        >Опубликовано:
-        {{ post.publishedDate | date: "dd MMMM yyyy года в HH:mm" }}</small
-      >
-    </mat-card-subtitle>
-  </mat-card-header>
-  <img
-    *ngIf="post.titleImageUrl && !post.imageFile; else userInputPhoto"
-    mat-card-image
-    src="{{ post.titleImageUrl }}"
-  />
-  <ng-template #userInputPhoto>
-    <img mat-card-image [src]="image" />
-  </ng-template>
-  <mat-card-content>
-    {{ post.description }}
-  </mat-card-content>
-  <mat-card-actions>
-    <a href="{{ post.fullUrl }}" mat-stroked-button target="_blank"
-      >Смотреть в источнике</a
+  <div class="image">
+    <img
+      *ngIf="post.titleImageUrl && !post.imageFile; else userInputPhoto"
+      src="{{ post.titleImageUrl }}"
+    />
+    <ng-template #userInputPhoto>
+      <img [src]="image" />
+    </ng-template>
+  </div>
+  <div class="content-wrapper">
+    <mat-card-header class="content">
+      <mat-card-title class="mat-card-title-wrapper">
+        <a
+          class="title-link"
+          [routerLink]="post.imageFile ? '' : ['/news', 'item', post.url]"
+          >{{ post.title }}</a
+        >
+      </mat-card-title>
+      <mat-card-subtitle>
+        <small
+          class="category"
+          matTooltip="Категория"
+          matTooltipPosition="right"
+          >Категории: {{ post.categoryType }} </small
+        ><br />
+        <small
+          >Опубликовано:
+          {{ post.publishedDate | date: "dd MMMM yyyy года в HH:mm" }}</small
+        >
+      </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content class="content description">
+      {{ post.description }}
+    </mat-card-content>
+
+    <mat-card-actions
+      *ngIf="post.titleImageUrl && !post.imageFile"
+      class="content"
     >
-  </mat-card-actions>
+      <a
+        mat-stroked-button
+        href="{{ post.fullUrl }}"
+        target="_blank"
+        class="see-source"
+      >
+        Смотреть в источнике
+      </a>
+    </mat-card-actions>
+  </div>
 </mat-card>
