--- a/ad-client/src/app/shared/utils/color-variables.scss
+++ b/ad-client/src/app/shared/utils/color-variables.scss
@@ -1,6 +1,9 @@
+$color-base-black: black;
+$color-base-white: white;
 $color-base-link: rgb(99, 0, 0);
-$color-hovered-link: rgb(205, 36, 47);
+$color-base-red: rgb(205, 36, 47);
 $color-alt-white: rgb(230, 230, 230);
 $color-header-base-link: rgb(63, 63, 63);
 $color-header-hovered-link: rgb(125, 125, 125);
-$color-base-black: black;
+$color-base-blue: rgb(0, 1, 29);
+$color-base-grey: rgb(125, 125, 125);
