refactored menu-btn style

--- a/ad-client/src/app/shared/components/global-layout/header/header.component.html
+++ b/ad-client/src/app/shared/components/global-layout/header/header.component.html
@@ -33,7 +33,7 @@
       <li>
         <button
           class="menu"
-          mat-icon-button
+          mat-button
           (click)="toggleMenu()"
           matTooltip="Меню"
           matTooltipPosition="left"
